[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated/AssetsV2/Bench_Side.png" type="Texture" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated/AssetsV2/Bench_MiddleFill.png" type="Texture" id=4]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated/Assets/YellowFlower_Icon.png" type="Texture" id=5]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated/LayersV2/Base_GreenLayerPanel_V2.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 2 )

[node name="Base_GreenLayerPanel_V2" type="MarginContainer"]
margin_right = 808.0
margin_bottom = 75.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 808.0
margin_bottom = 75.0
mouse_filter = 2

[node name="TitleContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2

[node name="LabelMarginer" type="MarginContainer" parent="HBoxContainer/TitleContainer"]
margin_top = 27.0
margin_right = 250.0
margin_bottom = 48.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/margin_top = 5
custom_constants/margin_left = 5

[node name="AdaptLayerNameLabel" type="Label" parent="HBoxContainer/TitleContainer/LabelMarginer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 250.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Adapt: Placeholder"
autowrap = true

[node name="ContentContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2

[node name="BackgroundHBox" type="HBoxContainer" parent="HBoxContainer/ContentContainer"]
margin_left = 86.0
margin_right = 163.0
margin_bottom = 75.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="LeftMargin" type="MarginContainer" parent="HBoxContainer/ContentContainer/BackgroundHBox"]
margin_top = 11.0
margin_right = 32.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_vertical = 6

[node name="LeftPic" type="TextureRect" parent="HBoxContainer/ContentContainer/BackgroundHBox/LeftMargin"]
margin_right = 32.0
margin_bottom = 53.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="ContentMargin" type="MarginContainer" parent="HBoxContainer/ContentContainer/BackgroundHBox"]
margin_left = 32.0
margin_right = 45.0
margin_bottom = 75.0
mouse_filter = 2
custom_constants/margin_left = -2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ContentContainer/BackgroundHBox/ContentMargin"]
margin_left = -2.0
margin_top = 25.0
margin_right = 13.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 4 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ContentContainer/BackgroundHBox/ContentMargin"]
margin_left = -2.0
margin_right = 13.0
margin_bottom = 75.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 50

[node name="ButtonHBox" type="HBoxContainer" parent="HBoxContainer/ContentContainer/BackgroundHBox/ContentMargin/MarginContainer"]
margin_left = 5.0
margin_right = 10.0
margin_bottom = 25.0
mouse_filter = 2
custom_constants/separation = 8

[node name="RightMargin" type="MarginContainer" parent="HBoxContainer/ContentContainer/BackgroundHBox"]
margin_left = 45.0
margin_top = 11.0
margin_right = 77.0
margin_bottom = 64.0
size_flags_vertical = 6

[node name="RightPic" type="TextureRect" parent="HBoxContainer/ContentContainer/BackgroundHBox/RightMargin"]
margin_right = 32.0
margin_bottom = 53.0
texture = ExtResource( 1 )

[node name="ActiveDescContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 508.0
margin_right = 808.0
margin_bottom = 75.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ActiveDescContainer"]
margin_right = 300.0
margin_bottom = 75.0
mouse_filter = 2
custom_constants/separation = 5

[node name="TitleMarginer" type="MarginContainer" parent="HBoxContainer/ActiveDescContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 21.0
mouse_filter = 2
custom_constants/margin_top = 5
custom_constants/margin_left = 5

[node name="ChosenPathNameLabel" type="Label" parent="HBoxContainer/ActiveDescContainer/VBoxContainer/TitleMarginer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 300.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder Name"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ActiveDescContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 75.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 10

[node name="ChosenPathTextureRect" type="TextureRect" parent="HBoxContainer/ActiveDescContainer/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 44.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 5 )

[node name="PathDescriptions" parent="HBoxContainer/ActiveDescContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 54.0
margin_top = 24.0
margin_right = 300.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 12
